--- a/templates/coaches.list.form.html
+++ b/templates/coaches.list.form.html
@@ -1,12 +1,19 @@
 <fieldset id="coachFs">
 	<legend> {{regCtrl.messages.labels.coaches}} </legend>
+	<div class="info">{{regCtrl.messages.info.coachesDetails}}</div>
 	<span class="button" name="add_coach" id="add_coach"
-		data-ng-click="addCoach()">{{regCtrl.messages.values.addCoach}}</span>
+		data-ng-click="regCtrl.addCoach()">{{regCtrl.messages.values.addCoach}}</span>
 	<div id="coaches">
-		<div data-ng-repeat="coach in registration.coaches"
+		<div data-ng-repeat="coach in regCtrl.registration.coaches"
 			id="coach_{{coach.id}}" class="coach">
-			<span id="coach_{{coach.id}}_delete" class="button"
-				data-ng-click="removeCoach($index)">{{regCtrl.messages.labels.delete}}</span>
+			<div class="coachCreator">
+				<div class="coachLabel">{{regCtrl.messages.labels.coach}}
+					N{{$index+1}}</div>
+				<div class="coachDeleteBtn">
+					<span id="coach_{{coach.id}}_delete" class="button"
+						data-ng-click="regCtrl.removeCoach($index)">{{regCtrl.messages.labels.delete}}</span>
+				</div>
+			</div>
 			<ol>
 				<li><label for="coach_{{coach.id}}_name">{{regCtrl.messages.labels.name}}</label>
 					<input type="text" id="coach_{{coach.id}}_name"
