--- a/templates/language.selector.html
+++ b/templates/language.selector.html
@@ -4,6 +4,8 @@
 	<div
 		data-ng-class="{'language': true, 'selected':regCtrl.lang == 'en'}"
 		data-ng-click="regCtrl.switchLanguage('en')">EN</div>
+
+	<div
+		data-ng-class="{'language': true, 'selected':regCtrl.lang == 'fr'}"
+		data-ng-click="regCtrl.switchLanguage('fr')">FR</div>
 </div>
-<div data-ng-class="{'language': true, 'selected':regCtrl.lang == 'fr'}"
-	data-ng-click="regCtrl.switchLanguage('fr')">FR</div>
