--- a/templates/crews.compositor.form.html
+++ b/templates/crews.compositor.form.html
@@ -1,24 +1,38 @@
 <fieldset id="crewsFs">
 	<legend> {{regCtrl.messages.labels.crews}} </legend>
-	<span class="button" name="add_crew" id="add_crew"
-		data-ng-click="addCrew()">{{regCtrl.messages.values.addCrew}}</span>
+	<div class="info">{{regCtrl.messages.info.crewsDetails}}</div>
+	<span class="button" id="add_crew"
+		data-ng-click="regCtrl.addCrew()">{{regCtrl.messages.values.addCrew}}</span>
 
 	<div id="crews">
-		<div data-ng-repeat="crew in registration.crews" class="crew"
+		<div data-ng-repeat="crew in regCtrl.registration.crews" class="crew"
 			id="crew_{{crew.id}}">
-			<span class="button" data-ng-click="removeCrew($index)">{{regCtrl.messages.labels.delete}}</span>
 			<ol>
-				<li><label for="crew_{{crew.id}}_type">{{regCtrl.messages.labels.category}}</label>
-					<select data-ng-model="crew.type"
-					data-ng-change="changeCrewType(crew)" id="crew_{{crew.id}}_type">
-						<option value="">---</option>
-						<option data-ng-repeat="boat in boats" value="{{boat}}">{{regCtrl.messages.boats[boat].label}}</option>
-				</select></li>
+				<li>
+					<div class="crewCreator">
+						<div class="crewLabel">
+							{{regCtrl.messages.labels.crew}} N{{$index+1}}
+						</div>
+						<div class="catLabel">
+							<label for="crew_{{crew.id}}_type">{{regCtrl.messages.labels.category}}</label>
+						</div>
+						<div class="dropboxContainer">
+							<select data-ng-model="crew.type"
+								data-ng-change="regCtrl.changeCrewType(crew)"
+								id="crew_{{crew.id}}_type">
+								<option value="">---</option>
+								<option data-ng-repeat="boat in regCtrl.boats" value="{{boat}}">{{regCtrl.messages.boats[boat].label}}</option>
+							</select>
+						</div>
+						<div class="crewDeleteBtn">
+							<span class="button" data-ng-click="regCtrl.removeCrew($index)">{{regCtrl.messages.labels.delete}}</span>
+						</div>
+					</div>
+				</li>
 				<li data-ng-show="crew.members && crew.members.length > 0">
 					<table>
 						<thead>
 							<tr>
-								<th>{{regCtrl.messages.labels.crewCaptain}}</th>
 								<th>{{regCtrl.messages.labels.place}}</th>
 								<th>{{regCtrl.messages.labels.name}}</th>
 								<th>{{regCtrl.messages.labels.surname}}</th>
@@ -29,10 +43,7 @@
 						</thead>
 						<tbody>
 							<tr data-ng-repeat="member in crew.members" class="memberItem">
-								<td><input type="radio"
-									name="data[crew][{{crew.id}}][capatain]"
-									data-ng-model="crew.captain" value="{{$index}}" /></td>
-								<td>{{getPlaceLabel(crew, $index)}}</td>
+								<td>{{regCtrl.getPlaceLabel(crew, $index)}}</td>
 								<td><input type="text" data-ng-model="member.name"
 									placeholder="{{regCtrl.messages.labels.name}}" /></td>
 								<td><input type="text" data-ng-model="member.surname"
@@ -40,13 +51,11 @@
 								<td><input type="text" data-ng-model="member.licence"
 									placeholder="{{regCtrl.messages.labels.licencePlaceholder}}" /></td>
 								<td><input id="crew_{{crew.id}}_member_{{$index+1}}_sex_m"
-									name="data[crews][{{crew.id}}][members][{{$index+1}}][sex]"
-									data-ng-model="member.sex" type="radio" value="M" /> <label
-									for="crew_{{crew.id}}_member_{{$index+1}}_sex_m">{{regCtrl.messages.labels.sexes.m}}</label>
+									data-ng-model="member.sex" type="radio" data-ng-value="'M'" />
+									<label for="crew_{{crew.id}}_member_{{$index+1}}_sex_m">{{regCtrl.messages.labels.sexes.m}}</label>
 									<input id="crew_{{crew.id}}_member_{{$index+1}}_sex_f"
-									name="data[crews][{{crew.id}}][members][{{$index+1}}][sex]"
-									data-ng-model="member.sex" type="radio" value="F" /> <label
-									for="crew_{{crew.id}}_member_{{$index+1}}_sex_f">{{regCtrl.messages.labels.sexes.f}}</label>
+									data-ng-model="member.sex" type="radio" data-ng-value="'F'" />
+									<label for="crew_{{crew.id}}_member_{{$index+1}}_sex_f">{{regCtrl.messages.labels.sexes.f}}</label>
 								</td>
 							</tr>
 						</tbody>
