--- a/sass/registration.confs.scss
+++ b/sass/registration.confs.scss
@@ -1,3 +1,3 @@
-$fontFamily: 		'Lucida Grande', Helvetica, Verdana, sans-serif;
+$fontFamily: 		'Lato', sans-serif;
 $borderStyle:  		#999999 thin solid;
 $smallPadding: 		5px;
