--- a/templates/club.info.form.html
+++ b/templates/club.info.form.html
@@ -2,21 +2,20 @@
 	<legend> {{regCtrl.messages.labels.clubIdentity}} </legend>
 	<ol>
 		<li><label class="required" for="club_name">{{regCtrl.messages.labels.clubName}}</label>
-			<input id="club_name" type="text" name="data[team][name]"
-			required="required" data-ng-model="regCtrl.registration.club.name" /></li>
-		<li><label for="club_tel_number">{{regCtrl.messages.labels.telNumber}}</label>
-			<input id="club_tel_number" type="text" name="data[team][tel]"
-			placeholder="+(XX)XXXXXXX"
-			data-ng-model="regCtrl.registration.club.telNumber" /></li>
+			<input id="club_name" type="text" required="required"
+			data-ng-model="regCtrl.registration.team.name" /></li>
 		<li><label class="required" for="club_address">{{regCtrl.messages.labels.clubAddress}}</label>
-			<input id="club_address" type="text" name="data[team][address]"
-			required="required" data-ng-model="regCtrl.registration.club.address" /></li>
+			<input id="club_address" type="text" required="required"
+			data-ng-model="regCtrl.registration.team.address" /></li>
+		<li><label for="club_tel_number">{{regCtrl.messages.labels.zipCode}}</label>
+			<input id="club_tel_number" type="text"
+			data-ng-model="regCtrl.registration.team.zipCode" /></li>
 		<li><label class="required" for="club_city">{{regCtrl.messages.labels.clubCity}}</label>
-			<input id="club_city" type="text" name="data[team][city]"
-			required="required" data-ng-model="regCtrl.registration.club.city" /></li>
+			<input id="club_city" type="text" required="required"
+			data-ng-model="regCtrl.registration.team.city" /></li>
 		<li><label class="required" for="club_country">{{regCtrl.messages.labels.clubCountry}}</label>
-			<input id="club_country" type="text" name="data[team][country]"
-			required="required" data-ng-model="regCtrl.registration.club.country" /></li>
+			<input id="club_country" type="text" required="required"
+			data-ng-model="regCtrl.registration.team.country" /></li>
 
 	</ol>
 </fieldset>
