--- a/sass/registration.app.scss
+++ b/sass/registration.app.scss
@@ -18,7 +18,9 @@ div.welcome {
 	padding-bottom: 10px;
 	border-bottom: $borderStyle;
 }
-
+h1, h2{
+	font-family: 'Lato', sans-serif;
+}
 h1 {
 	font-size: 32px;
 	margin: 16px 0 0 0;
@@ -225,4 +227,30 @@ div.info {
 label.required:after {
 	content: "*";
 	color: #ff0000;
+}
+
+
+#preloaderContainer {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background: rgba(255, 255, 255, 0.8);
+	z-index: 100;
+	top: 0px;
+	left: 0px;
+}
+
+#preloader {
+    position: relative;
+    top: 30%;
+    width: 100%;
+       
+}
+
+#preloader>img{
+    margin:0px auto;
+    display:block;
+}
+.regForm{
+	margin: 10px 0px 10px 0px;
 }
