Add reg update mode

--- a/templates/club.info.form.html
+++ b/templates/club.info.form.html
@@ -1,3 +1,5 @@
+<input type="hidden" 
+			data-ng-model="regCtrl.registration.team.id" />
 <fieldset id="clubIdentityFs">
 	<legend> {{regCtrl.messages.labels.clubIdentity}} </legend>
 	<ol>
