--- a/templates/meal.booking.form.html
+++ b/templates/meal.booking.form.html
@@ -1,4 +1,4 @@
-<div class="row" data-ng-show="bookCtrl.updateMode">
+<div class="row">
 	<div class="col-sm-6 col-md-4">
 		<div class="thumbnail">
 			<div class="caption">
