--- a/templates/meal.booking.form.html
+++ b/templates/meal.booking.form.html
@@ -3,6 +3,7 @@
 		<div class="thumbnail">
 			<div class="caption">
 				<h3>{{bookCtrl.messages.meals.saturdayNoon.label}}</h3>
+				<h4 class="price">8 &euro;/pers</h4>
 				<ul>
 					<li>{{bookCtrl.messages.meals.saturdayNoon.menu.meal}}</li>
 					<li>{{bookCtrl.messages.meals.saturdayNoon.menu.dessert}}</li>
@@ -18,6 +19,7 @@
 		<div class="thumbnail">
 			<div class="caption">
 				<h3>{{bookCtrl.messages.meals.saturdayNight.label}}</h3>
+				<h4 class="price">8 &euro;/pers</h4>
 				<ul>
 					<li>{{bookCtrl.messages.meals.saturdayNight.menu.meal}}</li>
 					<li>{{bookCtrl.messages.meals.saturdayNight.menu.dessert}}</li>
@@ -33,6 +35,7 @@
 		<div class="thumbnail">
 			<div class="caption">
 				<h3>{{bookCtrl.messages.meals.sundayNoon.label}}</h3>
+				<h4 class="price">8 &euro;/pers</h4>
 				<ul>
 					<li>{{bookCtrl.messages.meals.sundayNoon.menu.meal}}</li>
 					<li>{{bookCtrl.messages.meals.sundayNoon.menu.dessert}}</li>
@@ -46,6 +49,6 @@
 	</div>
 </div>
 
-<input type="submit" class="btn btn-lg btn-block"
+<button type="submit" class="btn btn-lg btn-block"
 	data-ng-class="{'btn-success': bookForm.$valid, 'btn-danger':!bookForm.$valid}"
-	value="{{bookCtrl.messages.values.submit}}">
+	 data-ng-bind-html="bookCtrl.getSubmitButtonLabel()"></button>
