Fullwidth images in slider

--- a/sass/booking.app.scss
+++ b/sass/booking.app.scss
@@ -4,6 +4,10 @@
 
 @import url(//fonts.googleapis.com/css?family=Lato:700);
 
+#slider-container .slider .slide img{
+	width:100%;
+}
+
 #slider-container{
 	width: 100%;
 	opacity:0.4;
