--- a/sass/results.scss
+++ b/sass/results.scss
@@ -75,3 +75,7 @@ div#results>div.event>div.results>div.result>div {
 	display: table-cell;
 	padding: 5px;
 }
+
+#preloaderContainer{
+	display: none;
+}
